IHM final_integration/CAS4-SDK/VC2013/CAS4.h

#define dpidMultiTrackCount             153
///////////////////////////
// Measurement Parameter //
///////////////////////////

//AWhat parameter constants for MeasurementParameter methods below
#define mpidIntegrationTime           1
#define mpidAverages                  2
#define mpidTriggerDelayTime          3
#define mpidTriggerTimeout            4
#define mpidCheckStart                5
#define mpidCheckStop                 6
#define mpidColormetricStart          7
#define mpidColormetricStop           8
#define mpidACQTime                  10
#define mpidMaxADCValue              11
#define mpidMaxADCPixel              12
#define mpidTriggerSource            14
#define mpidAmpOffset                15
#define mpidSkipLevel                16
#define mpidSkipLevelEnabled         17
#define mpidScanStartTime            18
#define mpidAutoRangeMaxIntTime      19
#define mpidAutoRangeLevel           20 //deprecated; use mpidAutoRangeMinLevel below
#define mpidAutoRangeMinLevel        20
#define mpidDensityFilter            21
#define mpidCurrentDensityFilter     22
#define mpidNewDensityFilter         23
#define mpidLastDCAge                24
#define mpidRelSaturation            25
#define mpidPulseWidth               27
#define mpidRemeasureDCInterval      28
#define mpidFlashDelayTime           29
#define mpidTOPAperture              30
#define mpidTOPDistance              31
#define mpidTOPSpotSize              32
#define mpidTriggerOptions           33
#define mpidForceFilter              34
#define mpidFlashType                35
#define mpidFlashOptions             36
#define mpidACQStateLine             37
#define mpidACQStateLinePolarity     38
#define mpidBusyStateLine            39
#define mpidBusyStateLinePolarity    40
#define mpidAutoFlowTime             41
#define mpidCRIMode                  42
#define mpidObserver                 43
#define mpidTOPFieldOfView           44
#define mpidCurrentCCDTemperature    46
#define mpidLastCCDTemperature       47
#define mpidDCCCDTemperature         48
#define mpidAutoRangeMaxLevel        49
#define mpidMultiTrackAcqTime        50
#define mpidTimeSinceScanStart       51
#define mpidCMTTrackStart            52
#define mpidColormetricWidthLevel    54
#define mpidIntTimeResolution        55
#define mpidIntTimeAlignPeriod       56
#define mpidColormetricType          57
#define mpidAveragingOnDevice        58
#define mpidMeasured                 59
#define mpidCMTSensorTemp            61
#define mpidFlashDuration            63
#define mpidColormetricPeakDiffWidth 67
//mpidColormetricType constants
#define cmtDefaultColormetric    0
#define cmtSWPColormetric      100
//mpidTriggerOptions constants
#define toAcceptOnlyWhenReady    0x0001
#define toForEachAutoRangeTrial  0x0002
#define toShowBusyState          0x0004
#define toShowACQState           0x0008
//mpidFlashType constants
#define ftNone      0
#define ftHardware  1
#define ftSoftware  2
//mpidFlashOptions constants
#define foEveryAverage  1
//mpidTriggerSource constants
#define trgSoftware  0
#define trgFlipFlop  3
//mpidCRIMode constants
#define criDIN6169     0
#define criCIE13_3_95  1
//mpidObserver constants
#define cieObserver1931  0
#define cieObserver1964  1
extern double __callconv casGetMeasurementParameter( int ADevice, int AWhat );
extern int __callconv casSetMeasurementParameter( int ADevice, int AWhat, double AValue );
extern int __callconv casClearDarkCurrent( int ADevice );
/////////////////////////////////
// Filter and Shutter commands //
/////////////////////////////////
#define casShutterInvalid   -1
#define casShutterOpen       0
#define casShutterClose      1
extern int __callconv casGetShutter( int ADevice );
extern void __callconv casSetShutter( int ADevice, int OnOff );
extern char* __callconv casGetFilterName( int ADevice, int AFilter, char* Dest, int AMaxLen );
extern int __callconv casGetDigitalOut( int ADevice, int APort );
extern void __callconv casSetDigitalOut( int ADevice, int APort, int OnOff );
extern int __callconv casGetDigitalIn( int ADevice, int APort );
////////////////////////////
// Parameter Set Commands //
////////////////////////////
extern int __callconv casDeleteParamSet( int ADevice, int AParamSet );
////////////////////////////////////////////
// Calibration and Configuration Commands //
////////////////////////////////////////////
extern void __callconv casCalculateCorrectedData( int ADevice );
extern void __callconv casConvoluteTransmission( int ADevice );
#define gcfDensityFunction        0
#define gcfSensitivityFunction    1
#define gcfTransmissionFunction   2
#define gcfDensityFactor          3
#define gcfTOPApertureFactor      4
#define gcfTOPDistanceFactor      5
    #define gcfTDDistanceMin   -3
    #define gcfTDDistanceMax   -2
    #define gcfTDCount         -1
    #define gcfTDExtraDistance  1
    #define gcfTDExtraFactor    2
#define gcfWLCalibrationChannel   6
    #define gcfWLExtraFirstCoefficient     -6
    #define gcfWLExtraLastCoefficient      -2
    #define gcfWLCalibPointCount           -1
    #define gcfWLExtraCalibrationDelete     1
    #define gcfWLExtraCalibrationDeleteAll  2
#define gcfWLCalibrationAlias     7
#define gcfWLCalibrationSave      8
#define gcfDarkArrayValues        9
    #define gcfDarkArrayDepth    -1 //Extra
    #define gcfDarkArrayIntTime  -2 //Extra
#define gcfTOPParameter          11
    #define gcfTOPApertureSize          0 //Extra
    #define gcfTOPSpotSizeDenominator   1
    #define gcfTOPSpotSizeOffset        2
#define gcfLinearityFunction     12
    #define gcfLinearityCounts  0
    #define gcfLinearityFactor  1
#define gcfRawData               14
//obsolete (03/2010); backward compatibility after renaming
#define gcfTop100Factor           4 //-> gcfTOPApertureFactor
#define gcfTop100DistanceFactor   5 //-> gcfTOPDistanceFactor
extern double __callconv casGetCalibrationFactors( int ADevice, int What, int Index, int Extra );
extern void __callconv casSetCalibrationFactors( int ADevice, int What, int Index, int Extra, double Value );
extern void __callconv casUpdateCalibrations( int ADevice );
extern void __callconv casSaveCalibration( int ADevice, char* AFileName );
extern void __callconv casClearCalibration( int ADevice, int What );
/////////////////////////
// Measurement Results //
/////////////////////////
extern double __callconv casGetData( int ADevice, int AIndex );
extern double __callconv casGetXArray( int ADevice, int AIndex );
extern double __callconv casGetDarkCurrent( int ADevice, int AIndex );
extern void __callconv casGetPhotInt( int ADevice, double* APhotInt, char* AUnit, int AUnitMaxLen );
extern void __callconv casGetRadInt( int ADevice, double* ARadInt, char* AUnit, int AUnitMaxLen );
extern double __callconv casGetCentroid( int ADevice );
extern void __callconv casGetPeak( int ADevice, double* x, double* y );
extern double __callconv casGetWidth( int ADevice );
#define cLambdaWidth        0
#define cLambdaLow          1
#define cLambdaMiddle       2
#define cLambdaHigh         3
#define cLambdaOuterWidth   4
#define cLambdaOuterLow     5
#define cLambdaOuterMiddle  6
#define cLambdaOuterHigh    7
extern double __callconv casGetWidthEx( int ADevice, int What ); // call only after casGetWidth
extern void __callconv casGetColorCoordinates( int ADevice, double* x, double* y, double* z, double* u, double* v1976, double* v1960 );
extern double __callconv casGetCCT( int ADevice );
extern double __callconv casGetCRI( int ADevice, int Index );
extern void __callconv casGetTriStimulus( int ADevice, double* X, double* Y, double* Z );
#define ecvVisualEffect         2
#define ecvUVA                  3
#define ecvUVB                  4
#define ecvUVC                  5
#define ecvVIS                  6
#define ecvCRICCT               7
#define ecvCDI                  8
#define ecvDistance             9
#define ecvCalibMin            10
#define ecvCalibMax            11
#define ecvScotopicInt         12
#define ecvCRIFirst           100
#define ecvCRILast            116
#define ecvCRITriKXFirst      120
#define ecvCRITriKXLast       136
#define ecvCRITriKYFirst      140
#define ecvCRITriKYLast       156
#define ecvCRITriKZFirst      160
#define ecvCRITriKZLast       176
#define ecvCRITriRXordUFirst  180
#define ecvCRITriRXordULast   196
#define ecvCRITriRYordVFirst  200
#define ecvCRITriRYordVLast   216
#define ecvCRITriRZordWFirst  220
#define ecvCRITriRZordWLast   236
extern double __callconv casGetExtendedColorValues( int ADevice, int AWhat );
/////////////////////////////
// Colormetric Calculation //
/////////////////////////////
extern int __callconv casColorMetric( int ADevice );
extern int __callconv casCalculateCRI( int ADevice );
extern int __callconv cmXYToDominantWavelength( double x, double y, double IllX, double IllY, double* LambdaDom, double* Purity );
extern int __callconv casCalculateLambdaDom( int ADevice, double IllX, double IllY, double* LambdaDom, double* Purity );
///////////////
// Utilities //
///////////////
extern char* __callconv casGetDLLFileName( char* Dest, int AMaxLen );
extern char* __callconv casGetDLLVersionNumber( char* Dest, int AMaxLen );
extern int __callconv casSaveSpectrum( int ADevice, char* AFileName );
extern double __callconv casGetExternalADCValue( int ADevice, int AIndex ); //obsolete; use mpidCurrentCCDTemperature
#define extNoError         0
#define extExternalError   1
#define extFilterBlink     2
#define extShutterBlink    4
extern void __callconv casSetStatusLED( int ADevice, int AWhat );
extern int __callconv casNmToPixel( int ADevice, double nm );
extern double __callconv casPixelToNm( int ADevice, int APixel );
extern int __callconv casCalculateTOPParameter( int ADevice, int AAperture, double ADistance, double* ASpotSize, double* AFieldOfView);
////////////////
// MultiTrack //
////////////////
extern int __callconv casMultiTrackInit( int ADevice, int ATracks );
extern int __callconv casMultiTrackDone( int ADevice );
extern int __callconv casMultiTrackCount( int ADevice ); //obsolete; use dpidMultiTrackCount
extern int __callconv casMultiTrackCopyData( int ADevice, int ATrack );
extern int __callconv casMultiTrackSaveData( int ADevice, char* AFileName );
extern int __callconv casMultiTrackLoadData( int ADevice, char* AFileName );
///////////////////////////
// Spectrum Manipulation //
///////////////////////////
extern void __callconv casSetData( int ADevice, int AIndex, double Value );
extern void __callconv casSetXArray( int ADevice, int AIndex, double Value );
extern void __callconv casSetDarkCurrent( int ADevice, int AIndex, double Value );
extern float* __callconv casGetDataPtr( int ADevice );
extern float* __callconv casGetXPtr( int ADevice );
extern void __callconv casLoadTestData( int ADevice, char* AFileName );