IHM final_integration/CAS4-SDK/Delphi/CAS4DLL.pas


const
  //AWhat parameter constants for MeasurementParameter methods below
  mpidIntegrationTime          = 01;
  mpidAverages                 = 02;
  mpidTriggerDelayTime         = 03;
  mpidTriggerTimeout           = 04;
  mpidCheckStart               = 05;
  mpidCheckStop                = 06;
  mpidColormetricStart         = 07;
  mpidColormetricStop          = 08;
  mpidACQTime                  = 10;
  mpidMaxADCValue              = 11;
  mpidMaxADCPixel              = 12;
  mpidTriggerSource            = 14;
  mpidAmpOffset                = 15;
  mpidSkipLevel                = 16;
  mpidSkipLevelEnabled         = 17;
  mpidScanStartTime            = 18;
  mpidAutoRangeMaxIntTime      = 19;
  mpidAutoRangeLevel           = 20; //deprecated 01/2012
  mpidAutoRangeMinLevel        = 20;
  mpidDensityFilter            = 21;
  mpidCurrentDensityFilter     = 22;
  mpidNewDensityFilter         = 23;
  mpidLastDCAge                = 24;
  mpidRelSaturation            = 25;
  mpidPulseWidth               = 27;
  mpidRemeasureDCInterval      = 28;
  mpidFlashDelayTime           = 29;
  mpidTOPAperture              = 30;
  mpidTOPDistance              = 31;
  mpidTOPSpotSize              = 32;
  mpidTriggerOptions           = 33;
  mpidForceFilter              = 34;
  mpidFlashType                = 35;
  mpidFlashOptions             = 36;
  mpidACQStateLine             = 37;
  mpidACQStateLinePolarity     = 38;
  mpidBusyStateLine            = 39;
  mpidBusyStateLinePolarity    = 40;
  mpidAutoFlowTime             = 41;
  mpidCRIMode                  = 42;
  mpidObserver                 = 43;
  mpidTOPFieldOfView           = 44;
  mpidCurrentCCDTemperature    = 46;
  mpidLastCCDTemperature       = 47;
  mpidDCCCDTemperature         = 48;
  mpidAutoRangeMaxLevel        = 49;
  mpidMultiTrackAcqTime        = 50;
  mpidTimeSinceScanStart       = 51;
  mpidCMTTrackStart            = 52;
  mpidColormetricWidthLevel    = 54;
  mpidIntTimeResolution        = 55;
  mpidIntTimeAlignPeriod       = 56;
  mpidColormetricType          = 57;
  mpidAveragingOnDevice        = 58;
  mpidMeasured                 = 59;
  mpidCMTSensorTemp            = 61;
  mpidFlashDuration            = 63;
  mpidColormetricPeakDiffWidth = 67;

  //mpidColormetricType constants
  cmtDefaultColormetric = 0;
  cmtSWPColormetric = 100;

  //mpidTriggerOptions constants
  toAcceptOnlyWhenReady   =  1;
  toForEachAutoRangeTrial =  2;
  toShowBusyState         =  4;
  toShowACQState          =  8;

  //mpidFlashType constants
  ftNone     = 0;
  ftHardware = 1;
  ftSoftware = 2;

  //mpidFlashOptions constants
  foEveryAverage     = 1;

  //mpidTriggerSource
  trgSoftware = 0;
  trgFlipFlop = 3;

  //mpidCRIMode
  criDIN6169    = 0;
  criCIE13_3_95 = 1;

  //mpidObserver
  cieObserver1931 = 0;
  cieObserver1964 = 1;

function casGetMeasurementParameter(ADevice: Integer; AWhat: Integer): Double; stdcall;
function casSetMeasurementParameter(ADevice: Integer; AWhat: Integer; AValue: Double): Integer; stdcall;
function casClearDarkCurrent(ADevice: Integer): Integer; stdcall;
function casDeleteParamSet(ADevice: Integer; AParamSet: Integer): Integer; stdcall;

//Filter and Shutter commands
const
  casShutterInvalid = -1;
  casShutterOpen    = 0;
  casShutterClose   = 1;

function casGetShutter(ADevice: Integer): Integer; stdcall;
procedure casSetShutter(ADevice: Integer; OnOff: Integer); stdcall;
function casGetFilterName(ADevice, AFilter: Integer; Dest: PChar; AMaxLen: Integer): PChar; stdcall;
function casGetDigitalOut(ADevice: Integer; APort: Integer): Integer; stdcall;
procedure casSetDigitalOut(ADevice: Integer; APort: Integer; OnOff: Integer); stdcall;
function casGetDigitalIn(ADevice: Integer; APort: Integer): Integer; stdcall;

//Calibration and Configuration Commands
procedure casCalculateCorrectedData(ADevice: Integer); stdcall;
procedure casConvoluteTransmission(ADevice: Integer); stdcall;

const
  gcfDensityFunction       = 0;
  gcfSensitivityFunction   = 1;
  gcfTransmissionFunction  = 2;
  gcfDensityFactor         = 3;
  gcfTOPApertureFactor     = 4;
  gcfTOPDistanceFactor     = 5;
    gcfTDDistanceMin   = -3;
    gcfTDDistanceMax   = -2;
    gcfTDCount         = -1;
    gcfTDExtraDistance = 1;
    gcfTDExtraFactor   = 2;
  gcfWLCalibrationChannel  = 6;
    gcfWLExtraFirstCoefficient     = -6;
    gcfWLExtraLastCoefficient      = -2;
    gcfWLCalibPointCount           = -1;
    gcfWLExtraCalibrationDelete    = 1;
    gcfWLExtraCalibrationDeleteAll = 2;
  gcfWLCalibrationAlias    = 7;
  gcfWLCalibrationSave     = 8; 
  gcfDarkArrayValues       = 9;
    gcfDarkArrayDepth   = -1;  //Extra
    gcfDarkArrayIntTime = -2;  //Extra
  gcfTOPParameter         = 11;
    gcfTOPApertureSize         = 0; //Extra
    gcfTOPSpotSizeDenominator  = 1;
    gcfTOPSpotSizeOffset       = 2;
  gcfLinearityFunction     = 12;
    gcfLinearityCounts = 0;
    gcfLinearityFactor = 1;
  gcfRawData               = 14;

  //obsolete (03/2010); backward compatibility after renaming
  gcfTop100Factor            = 4; //-> gcfTOPApertureFactor
  gcfTop100DistanceFactor    = 5; //-> gcfTOPDistanceFactor

function casGetCalibrationFactors(ADevice: Integer; What, Index, Extra: Integer): Double; stdcall;
procedure casSetCalibrationFactors(ADevice: Integer; What, Index, Extra: Integer; Value: Double); stdcall;
procedure casUpdateCalibrations(ADevice: Integer); stdcall;
procedure casSaveCalibration(ADevice: Integer; AFileName: PChar); stdcall;
procedure casClearCalibration(ADevice: Integer; What: Integer); stdcall;

//Measurement Results
function casGetData(ADevice: Integer; AIndex: Integer): Double; stdcall;
function casGetXArray(ADevice: Integer; AIndex: Integer): Double; stdcall;
function casGetDarkCurrent(ADevice: Integer; AIndex: Integer): Double; stdcall;
procedure casGetPhotInt(ADevice: Integer; var APhotInt: Double; AUnit: PChar; AUnitLen: Integer); stdcall;
procedure casGetRadInt(ADevice: Integer; var ARadInt: Double; AUnit: PChar; AUnitLen: Integer); stdcall;
function casGetCentroid(ADevice: Integer): Double; stdcall;
procedure casGetPeak(ADevice: Integer; var x, y: Double); stdcall;
function casGetWidth(ADevice: Integer): Double; stdcall;

const
  cLambdaWidth       = 0;
  cLambdaLow         = 1;
  cLambdaMiddle      = 2;
  cLambdaHigh        = 3;
  cLambdaOuterWidth  = 4;
  cLambdaOuterLow    = 5;
  cLambdaOuterMiddle = 6;
  cLambdaOuterHigh   = 7;

function casGetWidthEx(ADevice: Integer; What: Integer): Double; stdcall;// call only after casGetWidth
procedure casGetColorCoordinates(ADevice: Integer; var x, y, z, u, v1976, v1960: Double); stdcall;
function casGetCCT(ADevice: Integer): Double; stdcall;
function casGetCRI(ADevice: Integer; Index: Integer): Double; stdcall;
procedure casGetTriStimulus(ADevice: Integer; var X, Y, Z: Double); stdcall;

const
  ecvVisualEffect = 2;
  ecvUVA          = 3;
  ecvUVB          = 4;
  ecvUVC          = 5;
  ecvVIS          = 6;
  ecvCRICCT       = 7;
  ecvCDI          = 8;
  ecvDistance     = 9;
  ecvCalibMin     = 10;
  ecvCalibMax     = 11;
  ecvScotopicInt  = 12;

  ecvCRIFirst          = 100;
  ecvCRILast           = 116;
  ecvCRITriKXFirst     = 120;
  ecvCRITriKXLast      = 136;
  ecvCRITriKYFirst     = 140;
  ecvCRITriKYLast      = 156;
  ecvCRITriKZFirst     = 160;
  ecvCRITriKZLast      = 176;
  ecvCRITriRXordUFirst = 180;
  ecvCRITriRXordULast  = 196;
  ecvCRITriRYordVFirst = 200;
  ecvCRITriRYordVLast  = 216;
  ecvCRITriRZordWFirst = 220;
  ecvCRITriRZordWLast  = 236;

function casGetExtendedColorValues(ADevice: Integer; AWhat: Integer): Double; stdcall;

//Colormetric Calculation
function casColorMetric(ADevice: Integer): Integer; stdcall;
function casCalculateCRI(ADevice: Integer): Integer; stdcall;
function cmXYToDominantWavelength(x, y, IllX, IllY: Double; var LambdaDom, Purity: Double): Integer; stdcall;
function casCalculateLambdaDom(ADevice: Integer; IllX, IllY: Double; var LambdaDom, Purity: Double): Integer; stdcall;

//Utilities
function casGetDLLFileName(Dest: PChar; AMaxLen: Integer): PChar; stdcall;
function casGetDLLVersionNumber(Dest: PChar; AMaxLen: Integer): PChar; stdcall;
function casSaveSpectrum(ADevice: Integer; AFileName: PChar): Integer; stdcall;
function casGetExternalADCValue(ADevice: Integer; AIndex: Integer): Double; stdcall; //obsolete; use mpidCurrentCCDTemperature

const
  extNoError       = 0;
  extExternalError = 1;
  extFilterBlink   = 2;
  extShutterBlink  = 4;

procedure casSetStatusLED(ADevice: Integer; AWhat: Integer); stdcall;
function casNmToPixel(ADevice: Integer; nm: Double): Integer; stdcall;
function casPixelToNm(ADevice: Integer; APixel: Integer): Double; stdcall;
function casCalculateTOPParameter(ADevice: Integer; AAperture: Integer; ADistance: Double; var ASpotSize, AFieldOfView: Double): Integer; stdcall;

//MultiTrack
function casMultiTrackInit(ADevice: Integer; ATracks: Integer): Integer; stdcall;
function casMultiTrackDone(ADevice: Integer): Integer; stdcall;
function casMultiTrackCount(ADevice: Integer): Integer; stdcall; //obsolete; use dpidMultiTrackCount
function casMultiTrackCopyData(ADevice: Integer; ATrack: Integer): Integer; stdcall;
function casMultiTrackSaveData(ADevice: Integer; AFileName: PChar): Integer; stdcall;
function casMultiTrackLoadData(ADevice: Integer; AFileName: PChar): Integer; stdcall;

//Spectrum Manipulation
procedure casSetData(ADevice: Integer; AIndex: Integer; Value: Double); stdcall;
procedure casSetXArray(ADevice: Integer; AIndex: Integer; Value: Double); stdcall;
procedure casSetDarkCurrent(ADevice: Integer; AIndex: Integer; Value: Double); stdcall;
function casGetDataPtr(ADevice: Integer): Pointer; stdcall;
function casGetXPtr(ADevice: Integer): Pointer; stdcall;
procedure casLoadTestData(ADevice: Integer; AFileName: PChar); stdcall;
